language/move-lang/tests/move_check/typing/subtype_args_invalid.exp
error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:4:19 ───
    │
  4 │     fun mut<T>(x: &mut T) {}
    │                   ------ Is not a subtype of: '&mut u64'
    ·
 10 │         mut<u64>(&0);
    │         ^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut'. Invalid argument for parameter 'x'
    │                  -- The type: '&{integer}'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:4:19 ───
    │
  4 │     fun mut<T>(x: &mut T) {}
    │                   ------ Is not a subtype of: '&mut u64'
    ·
 11 │         mut<u64>(&S{});
    │         ^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut'. Invalid argument for parameter 'x'
    │                  ---- The type: '&0x8675309::M::S'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:5:30 ───
    │
  5 │     fun imm_mut<T>(x: &T, y: &mut T) {}
    │                              ------ Is not a subtype of: '&mut u64'
    ·
 15 │         imm_mut<u64>(&0, &0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::imm_mut'. Invalid argument for parameter 'y'
    │                          -- The type: '&{integer}'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:6:23 ───
    │
  6 │     fun mut_imm<T>(x: &mut T, y: &T) {}
    │                       ------ Is not a subtype of: '&mut u64'
    ·
 16 │         mut_imm<u64>(&0, &0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut_imm'. Invalid argument for parameter 'x'
    │                      -- The type: '&{integer}'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:7:23 ───
    │
  7 │     fun mut_mut<T>(x: &mut T, y: &mut T) {}
    │                       ------ Is not a subtype of: '&mut u64'
    ·
 17 │         mut_mut<u64>(&0, &0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut_mut'. Invalid argument for parameter 'x'
    │                      -- The type: '&{integer}'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:7:34 ───
    │
  7 │     fun mut_mut<T>(x: &mut T, y: &mut T) {}
    │                                  ------ Is not a subtype of: '&mut u64'
    ·
 17 │         mut_mut<u64>(&0, &0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut_mut'. Invalid argument for parameter 'y'
    │                          -- The type: '&{integer}'
    │

